--- a/models/antaresp6.html
+++ b/models/antaresp6.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/antaresp6/antares main.jpg" class="card-img-top" alt="Antares P6">
+          <img src="../assets/img/antaresp6/antares main.jpg" class="card-img-top project-img" alt="Antares P6" style="cursor:pointer;" onclick="showImageModal(this.src)">
           <div class="card-body">
             <p class="card-text">Later model of an Antares P6 Italian made calculator, from around 1950.
 BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW2015 bugs become utterly annoying. My machine can hardly deal with it; it takes around 5 min to refresh!!</p>
@@ -25,77 +25,94 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/antares 1.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/antares 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/antares 2.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/antares 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/antares 3.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/antares 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/bottom.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/bottom.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 1.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 2.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 3.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 4.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 5.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 5.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 6.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 6.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/drum01.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/drum01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/drum02.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/drum02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/operand group.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/operand group.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/upper plate assy.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/upper plate assy.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
+  <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-body p-0">
+          <img id="modalImage" src="" class="w-100" style="max-height:80vh;object-fit:contain;">
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function showImageModal(src) {
+      document.getElementById('modalImage').src = src;
+      var modal = new bootstrap.Modal(document.getElementById('imageModal'));
+      modal.show();
+    }
+  </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
   </footer>
