--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/curtatype1/complete group.jpg" class="card-img-top" alt="Curta Type 1">
+          <img src="../assets/img/curtatype1/complete group.jpg" class="card-img-top project-img" alt="Curta Type 1" style="cursor:pointer;" onclick="showImageModal(this.src)">
           <div class="card-body">
             <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
 Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
@@ -28,77 +28,94 @@ You can get blueprints and instructions in:</p>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
+  <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-body p-0">
+          <img id="modalImage" src="" class="w-100" style="max-height:80vh;object-fit:contain;">
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function showImageModal(src) {
+      document.getElementById('modalImage').src = src;
+      var modal = new bootstrap.Modal(document.getElementById('imageModal'));
+      modal.show();
+    }
+  </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
   </footer>
