--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/beretta950b/render1.jpg" class="card-img-top" alt="Beretta 950B Minx">
+          <img src="../assets/img/beretta950b/render1.jpg" class="card-img-top project-img" alt="Beretta 950B Minx" style="cursor:pointer;" onclick="showImageModal(this.src)">
           <div class="card-body">
             <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
 After 1968 this model included an external safety.
@@ -26,22 +26,39 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
         </div>
       </div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
+  <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-body p-0">
+          <img id="modalImage" src="" class="w-100" style="max-height:80vh;object-fit:contain;">
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function showImageModal(src) {
+      document.getElementById('modalImage').src = src;
+      var modal = new bootstrap.Modal(document.getElementById('imageModal'));
+      modal.show();
+    }
+  </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
   </footer>
