--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/curtatype1/complete group.jpg" class="card-img-top project-img" alt="Curta Type 1" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/complete group.jpg" class="card-img-top project-img" alt="Curta Type 1" style="cursor:pointer;" onclick="showImageModal('complete group.jpg')">
           <div class="card-body">
             <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
 Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
@@ -28,72 +28,72 @@ You can get blueprints and instructions in:</p>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage01.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage02.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage03.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta01.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta02.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta03.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta04.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta05.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta06.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta07.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta08.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta09.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta10.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta11.jpg')">
         </div>
       </div>
     </div>
@@ -110,11 +110,27 @@ You can get blueprints and instructions in:</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    function showImageModal(src) {
-      document.getElementById('modalImage').src = src;
+    var images = ['complete group.jpg','carriage01.jpg','carriage02.jpg','carriage03.jpg','curta01.jpg','curta02.jpg','curta03.jpg','curta04.jpg','curta05.jpg','curta06.jpg','curta07.jpg','curta08.jpg','curta09.jpg','curta10.jpg','curta11.jpg'];
+    var currentIndex = 0;
+    var imageWebPath = '../assets/img/curtatype1/';
+    function showImageModal(imgFile) {
+      currentIndex = images.indexOf(imgFile);
+      document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
       var modal = new bootstrap.Modal(document.getElementById('imageModal'));
       modal.show();
     }
+    document.addEventListener('keydown', function(e) {
+      var modalEl = document.getElementById('imageModal');
+      var isShown = modalEl.classList.contains('show');
+      if (!isShown) return;
+      if (e.key === 'ArrowLeft') {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      } else if (e.key === 'ArrowRight') {
+        currentIndex = (currentIndex + 1) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      }
+    });
   </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
