--- a/models/antaresp6.html
+++ b/models/antaresp6.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/antaresp6/antares main.jpg" class="card-img-top project-img" alt="Antares P6" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/antares main.jpg" class="card-img-top project-img" alt="Antares P6" style="cursor:pointer;" onclick="showImageModal('antares main.jpg')">
           <div class="card-body">
             <p class="card-text">Later model of an Antares P6 Italian made calculator, from around 1950.
 BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW2015 bugs become utterly annoying. My machine can hardly deal with it; it takes around 5 min to refresh!!</p>
@@ -25,72 +25,72 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/antares 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/antares 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('antares 1.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/antares 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/antares 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('antares 2.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/antares 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/antares 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('antares 3.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/bottom.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/bottom.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('bottom.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/carriage 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 1.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/carriage 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 2.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/carriage 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 3.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/carriage 4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 4.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 5.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/carriage 5.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 5.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/carriage 6.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/carriage 6.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 6.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/drum01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/drum01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('drum01.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/drum02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/drum02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('drum02.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/operand group.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/operand group.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('operand group.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/upper plate assy.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/antaresp6/upper plate assy.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('upper plate assy.jpg')">
         </div>
       </div>
     </div>
@@ -107,11 +107,27 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    function showImageModal(src) {
-      document.getElementById('modalImage').src = src;
+    var images = ['antares main.jpg','antares 1.jpg','antares 2.jpg','antares 3.jpg','bottom.jpg','carriage 1.jpg','carriage 2.jpg','carriage 3.jpg','carriage 4.jpg','carriage 5.jpg','carriage 6.jpg','drum01.jpg','drum02.jpg','operand group.jpg','upper plate assy.jpg'];
+    var currentIndex = 0;
+    var imageWebPath = '../assets/img/antaresp6/';
+    function showImageModal(imgFile) {
+      currentIndex = images.indexOf(imgFile);
+      document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
       var modal = new bootstrap.Modal(document.getElementById('imageModal'));
       modal.show();
     }
+    document.addEventListener('keydown', function(e) {
+      var modalEl = document.getElementById('imageModal');
+      var isShown = modalEl.classList.contains('show');
+      if (!isShown) return;
+      if (e.key === 'ArrowLeft') {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      } else if (e.key === 'ArrowRight') {
+        currentIndex = (currentIndex + 1) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      }
+    });
   </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
