--- a/models/astrats22.html
+++ b/models/astrats22.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/astrats22/render1.jpg" class="card-img-top project-img" alt="Astra TS-22" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/astrats22/render1.jpg" class="card-img-top project-img" alt="Astra TS-22" style="cursor:pointer;" onclick="showImageModal('render1.jpg')">
           <div class="card-body">
             <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
 See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
@@ -25,7 +25,7 @@ See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-t
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/astrats22/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/astrats22/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render2.jpg')">
         </div>
       </div>
     </div>
@@ -42,11 +42,27 @@ See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-t
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    function showImageModal(src) {
-      document.getElementById('modalImage').src = src;
+    var images = ['render1.jpg','render2.jpg'];
+    var currentIndex = 0;
+    var imageWebPath = '../assets/img/astrats22/';
+    function showImageModal(imgFile) {
+      currentIndex = images.indexOf(imgFile);
+      document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
       var modal = new bootstrap.Modal(document.getElementById('imageModal'));
       modal.show();
     }
+    document.addEventListener('keydown', function(e) {
+      var modalEl = document.getElementById('imageModal');
+      var isShown = modalEl.classList.contains('show');
+      if (!isShown) return;
+      if (e.key === 'ArrowLeft') {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      } else if (e.key === 'ArrowRight') {
+        currentIndex = (currentIndex + 1) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      }
+    });
   </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
