--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/beretta950b/render1.jpg" class="card-img-top project-img" alt="Beretta 950B Minx" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/beretta950b/render1.jpg" class="card-img-top project-img" alt="Beretta 950B Minx" style="cursor:pointer;" onclick="showImageModal('render1.jpg')">
           <div class="card-body">
             <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
 After 1968 this model included an external safety.
@@ -26,17 +26,17 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('image3.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render2.jpg')">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal(this.src)">
+          <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render4.jpg')">
         </div>
       </div>
     </div>
@@ -53,11 +53,27 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    function showImageModal(src) {
-      document.getElementById('modalImage').src = src;
+    var images = ['render1.jpg','image3.jpg','render2.jpg','render4.jpg'];
+    var currentIndex = 0;
+    var imageWebPath = '../assets/img/beretta950b/';
+    function showImageModal(imgFile) {
+      currentIndex = images.indexOf(imgFile);
+      document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
       var modal = new bootstrap.Modal(document.getElementById('imageModal'));
       modal.show();
     }
+    document.addEventListener('keydown', function(e) {
+      var modalEl = document.getElementById('imageModal');
+      var isShown = modalEl.classList.contains('show');
+      if (!isShown) return;
+      if (e.key === 'ArrowLeft') {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      } else if (e.key === 'ArrowRight') {
+        currentIndex = (currentIndex + 1) % images.length;
+        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+      }
+    });
   </script>
   <footer class="text-center py-4 text-muted">
     &copy; 2025 teruteru314
