--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -56,23 +56,29 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
     var images = ['render1.jpg','image3.jpg','render2.jpg','render4.jpg'];
     var currentIndex = 0;
     var imageWebPath = '../assets/img/beretta950b/';
+    var modalInstance = null;
     function showImageModal(imgFile) {
       currentIndex = images.indexOf(imgFile);
       document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
-      var modal = new bootstrap.Modal(document.getElementById('imageModal'));
-      modal.show();
+      modalInstance = new bootstrap.Modal(document.getElementById('imageModal'));
+      modalInstance.show();
     }
-    document.addEventListener('keydown', function(e) {
-      var modalEl = document.getElementById('imageModal');
-      var isShown = modalEl.classList.contains('show');
-      if (!isShown) return;
-      if (e.key === 'ArrowLeft') {
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
-        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
-      } else if (e.key === 'ArrowRight') {
-        currentIndex = (currentIndex + 1) % images.length;
-        document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+    var keyListener = function(e) {
+      if (document.getElementById('imageModal').classList.contains('show')) {
+        if (e.key === 'ArrowLeft') {
+          currentIndex = (currentIndex - 1 + images.length) % images.length;
+          document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+        } else if (e.key === 'ArrowRight') {
+          currentIndex = (currentIndex + 1) % images.length;
+          document.getElementById('modalImage').src = imageWebPath + images[currentIndex];
+        }
       }
+    };
+    document.getElementById('imageModal').addEventListener('shown.bs.modal', function () {
+      document.addEventListener('keydown', keyListener);
+    });
+    document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
+      document.removeEventListener('keydown', keyListener);
     });
   </script>
   <footer class="text-center py-4 text-muted">
