--- a/models/antaresp6.html
+++ b/models/antaresp6.html
@@ -22,6 +22,7 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
         </div>
       </div>
     </div>
+    <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
