--- a/models/astrats22.html
+++ b/models/astrats22.html
@@ -22,6 +22,7 @@ See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-t
         </div>
       </div>
     </div>
+    <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
