--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -25,6 +25,7 @@ You can get blueprints and instructions in:</p>
         </div>
       </div>
     </div>
+    <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
