--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -23,6 +23,7 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
         </div>
       </div>
     </div>
+    <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
