--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
   </div>
 </div>
 
+<!-- PROJECT: sti2011 -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/sti2011/render1.jpg" class="card-img-top" alt="STI 2011">
+    <div class="card-body">
+      <h5 class="card-title">STI 2011</h5>
+      <p class="card-text">This is one of the many incarnations of the renewed .45 1911 pistol but with a double tier magazine for 13 rounds. It uses most of the standard Colt 1911 parts.</p>
+      <a href="models/sti2011.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
 <!-- PROJECT: antaresp6 -->
 <div class="col">
   <div class="card h-100 shadow-sm">
