--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@ You can get blueprints and instructions in:</p>
   </div>
 </div>
 
+<!-- PROJECT: bersa380cc -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/bersa380cc/render5.jpg" class="card-img-top" alt="Bersa Thunder 380 CC">
+    <div class="card-body">
+      <h5 class="card-title">Bersa Thunder 380 CC</h5>
+      <p class="card-text">Bersa Thunder .380 CC (2011), one of the best concealed carry pistols nowadays.</p>
+      <a href="models/bersa380cc.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
 <!-- END-OF-PROJECTS -->
     </div>
   </div>
