--- a/models/sti2011.html
+++ b/models/sti2011.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/sti2011/render1.jpg" class="card-img-top project-img" alt="STI 2011" style="cursor:pointer;" onclick="showImageModal('render1.jpg')">
+          <img src="../assets/img/sti2011/render3.jpg" class="card-img-top project-img" alt="STI 2011" style="cursor:pointer;" onclick="showImageModal('render3.jpg')">
           <div class="card-body">
             <p class="card-text">This is one of the many incarnations of the renewed .45 1911 pistol but with a double tier magazine for 13 rounds. It uses most of the standard Colt 1911 parts.</p>
             <a href="../assets/files/sti2011/sti 2011 (step).zip" class="btn btn-primary" download>Download ZIP</a>
@@ -25,7 +25,37 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
+          <img src="../assets/img/sti2011/render1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render1.jpg')">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
           <img src="../assets/img/sti2011/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render2.jpg')">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../assets/img/sti2011/render4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render4.jpg')">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../assets/img/sti2011/render5.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render5.jpg')">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../assets/img/sti2011/render6.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render6.jpg')">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../assets/img/sti2011/render7.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render7.jpg')">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../assets/img/sti2011/render8.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render8.jpg')">
         </div>
       </div>
     </div>
@@ -42,7 +72,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    var images = ['render1.jpg','render2.jpg'];
+    var images = ['render3.jpg','render1.jpg','render2.jpg','render4.jpg','render5.jpg','render6.jpg','render7.jpg','render8.jpg'];
     var currentIndex = 0;
     var imageWebPath = '../assets/img/sti2011/';
     var modalInstance = null;
